--- a/ime/index.html
+++ b/ime/index.html
@@ -7,15 +7,23 @@
     <link rel="stylesheet" href="../node_modules/shower-ok-invert/styles/screen_43.css">
     <link rel="stylesheet" href="css/style.css">
 
+	<!--Video plugin-->
+    <link rel="stylesheet" href="css/video.css">
     <script src="js/modernizr.video.js"></script>
     <script>
-        if (Modernizr.video && Modernizr.video.h264 !== "") {
-            body = document.getElementsByTagName('html');
+        var debugMode = true;
 
-            body[0].classList.add('modernizr-h264');
+        if (Modernizr.video && Modernizr.video.h264 !== "") {
+            html = document.getElementsByTagName('html');
+
+            html[0].classList.add('modernizr-h264');
         }
 
 	    var isMobile = false;
+        var isIPnone = false;
+	    var isIPad = false;
+
+        var html = document.getElementsByTagName('html')[0];
 
 		if (navigator.userAgent.match(/Android/i)
 		|| navigator.userAgent.match(/webOS/i)
@@ -25,13 +33,25 @@
 		|| navigator.userAgent.match(/BlackBerry/i)
 		|| navigator.userAgent.match(/Windows Phone/i)
 		) {
-		    var body = document.getElementsByTagName('html');
-
 		    isMobile = true;
 
-		    body[0].classList.add('mobile');
+		   html.classList.add('mobile');
+		}
+
+		if ( navigator.userAgent.match(/iPhone/i) ) {
+		    isIPnone = true;
+
+            html.classList.add('iphone');
+		}
+
+		if ( navigator.userAgent.match(/iPad/i) ) {
+		    isIPad = true;
+
+		    html.classList.add('ipad');
 		}
     </script>
+	<script src="js/video.js"></script>
+	<!--/Video plugin-->
 
 </head>
 <body class="list">
@@ -47,13 +67,13 @@
 
 </header>
 
-<section class="slide shout" id="Cover"><div>
+<section class="slide shout cover" id="Cover"><div>
     <div class="intro-video hide-for-mobile">
         <video preload loop>
             <source src="videos/build.mp4" type="video/mp4;">
         </video>
 
-        <div class="overlay" ></div>
+        <div class="overlay"></div>
     </div>
 
     <h2 class="bold light">Taking Development Tools<br> To The Next Level</h2>
@@ -190,7 +210,7 @@
     </h2>
 </div></section>
 
-<section class="slide clean"><div>
+<section class="slide cover"><div>
     <h2>Living Style Guide essentials demo</h2>
 
 	<div class="video_wrapper">
@@ -250,7 +270,7 @@
     <img class="gif real" src="i/superman.gif" alt="Superman"/>
 </div></section>
 
-<section class="slide clean"><div>
+<section class="slide cover"><div>
     <h2>Interactive colors Style Guide demo</h2>
 
 	<div class="video_wrapper">
@@ -292,13 +312,13 @@
 	</ul>
 </div></section>
 
-<section class="slide clean"><div>
+<section class="slide cover"><div>
     <h2>Comments plugin demo</h2>
 
 	<div class="video_wrapper">
         To watch demo video, please open slides in browser that supports .mp4 playback, like Chrome or Safari.
 
-	    <video class="place m t" preload>
+	    <video class="place m t" preload autoplay>
 	        <source src="videos/comments.mp4" type="video/mp4;">
 	    </video>
 	</div>
@@ -418,7 +438,7 @@
     <h2 class="left" style="color: #fff">With<br> Source API</h2>
 </div></section>
 
-<section class="slide clean"><div>
+<section class="slide cover"><div>
     <h2>Lego Prototyping From Real Style Guides Demo</h2>
 
 	<div class="video_wrapper">
@@ -430,7 +450,7 @@
 	</div>
 </div></section>
 
-<section class="slide clean"><div>
+<section class="slide cover"><div>
     <h2>Lego Prototyping From Real Style Guides Demo</h2>
 
 	<div class="video_wrapper">
@@ -459,10 +479,8 @@
 </div></section>
 
 <div class="progress"><div></div></div>
-<script src="../node_modules/shower/node_modules/shower-core/shower.min.js"></script>
-
-<script src="js/jquery-2.1.0.min.js"></script>
-<script src="js/script.js"></script>
+<!--<script src="../node_modules/shower-core/shower.min.js"></script>-->
+<script src="js/shower.js"></script>
 
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript">
