Updating shower-ok-invert theme

--- a/ime/index.html
+++ b/ime/index.html
@@ -41,7 +41,7 @@
     <div class="place b author">
         <div><a class="bl" href="http://rhr.me">Robert Haritonov</a>, <a class="bl" href="http://twitter.com/operatino_en">@operatino_en</a></div>
         <div style="font-size: .7em">Head of Front End Development at</div>
-        <a href="http://corp.mail.ru/en/company/social/" style="border: none;"><img class="ok" src="../node_modules/shower-ok-invert/images/ok-logo-or.svg" alt="одноклассники"></a>
+        <a href="http://corp.mail.ru/en/company/social/" style="border: none;"><img class="ok uncover" src="../node_modules/shower-ok-invert/images/ok-logo-or.svg" alt="одноклассники"></a>
     </div>
 </div></section>
 
@@ -444,6 +444,10 @@
 </div></section>
 
 <div class="progress"><div></div></div>
+<!--<script>-->
+	<!--var shower = {};-->
+	<!--shower.debugMode = true;-->
+<!--</script>-->
 <script src="../node_modules/shower-core/shower.min.js"></script>
 
 <!-- Yandex.Metrika counter -->
