Updating twitter link

--- a/ime/index.html
+++ b/ime/index.html
@@ -18,7 +18,7 @@
 <header class="caption">
     <h1>Taking Development Tools To The Next Level</h1>
 
-	<p><a href="http://rhr.me">Robert Haritonov</a>, <a href="http://twitter.com/operatino_en">@operatino_en</a>, Head of Front End Development at <a href="http://corp.mail.ru/en/company/social/">OK.ru</a></p>
+	<p><a href="http://rhr.me">Robert Haritonov</a>, <a href="http://twitter.com/operatino">@operatino</a>, Head of Front End Development at <a href="http://corp.mail.ru/en/company/social/">OK.ru</a></p>
 
 	<p style="font-size:.8em;"><a href="http://feopsconf.com">Front-end Ops Conf</a>, San Francisco, 2014. <a href="https://www.youtube.com/watch?v=cMIad0zl00I">Video</a>.</p>
 
@@ -39,7 +39,7 @@
     <h2 class="bold light">Taking Development Tools<br> To The Next Level</h2>
 
     <div class="place b author">
-        <div><a class="bl" href="http://rhr.me">Robert Haritonov</a>, <a class="bl" href="http://twitter.com/operatino_en">@operatino_en</a></div>
+        <div><a class="bl" href="http://rhr.me">Robert Haritonov</a>, <a class="bl" href="http://twitter.com/operatino">@operatino</a></div>
         <div style="font-size: .7em">Head of Front End Development at</div>
         <a href="http://corp.mail.ru/en/company/social/" style="border: none;"><img class="ok uncover" src="../node_modules/shower-ok-invert/images/ok-logo-or.svg" alt="одноклассники"></a>
     </div>
@@ -435,7 +435,7 @@
 
 <section class="slide"><div>
     <h2>Taking Development Tools<br> <span style="line-height: 1.4">To The Next Level</span></h2>
-    <div class="fz-l">Robert Haritonov, <a href="http://twitter.com/operatino_en">@operatino_en</a>, <a href="http://corp.mail.ru/en/company/social/">OK.ru</a></div>
+    <div class="fz-l">Robert Haritonov, <a href="http://twitter.com/operatino">@operatino</a>, <a href="http://corp.mail.ru/en/company/social/">OK.ru</a></div>
     <ul class="fz-l">
         <li><a href="mailto:r@rhr.me">r@rhr.me</a></li>
         <li><a href="http://sourcejs.com">sourcejs.com</a></li>
